# flon-extension

./: LICENSE  README.md  language-configuration.json  package.json
flexion-interpreter/: pyproject.toml
flexion-vscode/: CHANGELOG.md  extension.js  package.json
flexion-vscode/panel/: definitions.flon
flexion-vscode/panel/docs/: python_guide._wiki  python_guide.md  wiki.md
flexion-vscode/panel/examples/advanced/: complex.flon  expressions.flon
flexion-vscode/panel/examples/basics/: nested.flon  references.flon  simple.flon  types.flon
flexion-vscode/panel/examples/comparisons/: comparison.flon  comparison_commented.flon
flexion-vscode/panel/examples/python/: advanced_parsing.py  basic_usage.py  conversion.py
flexion-vscode/panel/examples/python/workflows/: batch_conversion.py  config_manage.py  parse_convert.py
flexion-vscode/snippets/: flon.json
flexion-vscode/syntaxes/: flon.tmLanguage.json
panel/: definitions.flon
panel/docs/: changelog.md  wiki.md
