[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flexion-interpreter"
version = "1.0.0"
authors = [
    { name="Error Dev", email="your-email@example.com" },
]
description = "A Python library for parsing and working with Flexion (.flon) files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["interpreter*"]